    . [18406] Infinite loop in `vpPose::poseRansac()'
    . [18446] Bad KLT points detection in vpMbKtlTracker and vpMbEdgeKltTracker.
    . [18451] Infinite loop in vpSimulatorViper850::stopMotion()
    . [18452] Empty filename check in vpImageIo, vpVideoReader, vpVideoWriter is erroneous
    . [18459] Error when initializing KLT related trackers but no key point is deteted.

----------------------------------------------
ViSP 2.9.0 (released February 18th, 2014)
  - New features
    . Introduction of a new template tracker using SSD (vpTemplateTrackerSSD
      classes) or ZNCC (vpTemplateTrackerZNCC classes). These trackers are able
      to estimate 2D transformations such as translation, SRT (scale, rotation
      and translation), affine and homography. A video
      illustrating this tracker capabilities is available on:
      http://team.inria.fr/lagadic/visp/computer-vision.html
    . In vpServo introduction of a new controller able to ensure continuous
      sequencing
  - Improvements
    . Add missing const to member functions and arguments passed by reference.
    . Introduction of a new option BUILD_WITH_STATIC_CRT that allows to set
      /MT (default) or /MD msvc build option
    . Compatibility with mingw, msvc11 (2012), msvc12 (2013)
      and open solaris 11
    . Trace and debug can now be enabled/disabled using CMake
      ACTIVATE_DEBUG_TRACE option
    . Fix errors detected by Covery Scan static code analyser
    . Fix warnings detected with Gnu g++ -Weffc++ -Wshadow compiler flags
    . Improve a lot of classes
  - New examples
    . New example that shows how to use the template tracker
    . A lot of new sample code provided in tutorial folder
  - New tutorials
    . Installation from source on Linux Fedora
    . Image filtering
    . Template tracking
    . Homography estimation from points
    . Keypoint matching
    . How to boost your visual servo control law
    . Debug and trace printings
  - Bug fixed