@@ -63,6 +63,7 @@ ViSP 2.10.0 (under development)
     . [18451] Infinite loop in vpSimulatorViper850::stopMotion()
     . [18452] Empty filename check in vpImageIo, vpVideoReader, vpVideoWriter is erroneous
     . [18459] Error when initializing KLT related trackers but no key point is deteted.
+    . [18471] Bad fov computation in vpCameraParameters.
 
 ----------------------------------------------
 ViSP 2.9.0 (released February 18th, 2014)
